# YAQI

./: README.md  pyproject.toml
mirror/: choose_reverse.py  infer_mean.py  mirror_audio.sh  mirror_image.sh  mirror_music.sh  mirror_text.sh  mirror_video.sh
scripts/anyllava-eval/: all.sh
scripts/anyllava-eval/audio/: eval_audioset.sh  eval_clothoaqa.sh  eval_tacos.sh
scripts/anyllava-eval/image/: eval_coco.sh  eval_flickr30k.sh  eval_gqa.sh  eval_ocrvqa.sh  eval_textvqa.sh  eval_vg.sh
scripts/anyllava-eval/music/: eval_caps.sh  eval_chord.sh  eval_emo.sh  eval_insts.sh  eval_musicbench.sh
scripts/anyllava-eval/text/: eval_codeqa.sh  eval_gsm8k.sh  eval_mmlu.sh
scripts/anyllava-eval/video/: eval_mc.sh  eval_ms.sh  eval_oe.sh
scripts/anyllava-llama-7b-mirror/: finetune_audio.sh  finetune_image.sh  finetune_music.sh  finetune_text.sh  finetune_video.sh  pretrain_audio.sh  pretrain_video.sh  pretrain_vision.sh
scripts/anyllava-vicuna-7b-mirror/: finetune_audio.sh  finetune_image.sh  finetune_music.sh  finetune_text.sh  finetune_video.sh  pretrain_audio.sh  pretrain_video.sh  pretrain_vision.sh
videollava/: constants.py
videollava/eval/anyllava/: model_audio_qa.py  model_image_qa.py  model_text_qa.py  model_video_qa.py
videollava/eval/anyllava/image/: eval_grounding.py  eval_textvqa.py  m4c_evaluator.py
videollava/model/: builder.py  llava_arch.py
videollava/model/multimodal_encoder/: builder.py
videollava/model/multimodal_projector/: builder.py
videollava/serve/: cli.py  utils.py
videollava/train/: train.py
(+6 files in other folders)
